Highlight evaluation results

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     (cond ((zero? n) m)
           (else (+ (sub1 n) (add1 m))))))
 
-(+ 1000 1)</textarea>
+(+ 1000 1)
+(+ 1000 1</textarea>
     <script src="lib/codemirror.js"></script>
     <script src="lib/vim.js"></script>
     <script src="lib/matchbrackets.js"></script>
