--- a/index.html
+++ b/index.html
@@ -26,43 +26,16 @@
 (+ 100 200
 </textarea>
 
-    <script>
-      toggle_menu = function () {
-        var menu = document.getElementById('menu');
-        var toggle = document.getElementById('toggle');
-        if (toggle.innerText === 'hide') {
-          menu.style.visibility = 'hidden';
-          toggle.innerText = 'show';
-        } else {
-          menu.style.visibility = '';
-          toggle.innerText = 'hide';
-        }
-      };
-    </script>
-    <small>
-      <a id="toggle" href="javascript:void(0)" onclick="toggle_menu()">hide</a>
-    </small>
-    <div id="menu">
-      <center>
-        <p>
-          <img src="img/elephant.gif" width="150"/>
-          <br />
-          <a href="http://www.amazon.com/exec/obidos/ASIN/0262560992/">
-            buy the book
-          </a>
-        </p>
-        <p>
-          <img src="img/video.gif" width="150"/>
-          <br />
-          <a href="http://www.amazon.com/exec/obidos/ASIN/0262560992/">
-            watch the video
-          </a>
-        </p>
-        <p>
-          <a id="run" href="javascript:void(0)" onclick="app.run(app.editor)">Run &rArr;</a><br /><small>(Shift&#8209;Enter)</small>
-        </p>
-      </center>
+    <a id="toggle" href="javascript:void(0)" onclick="app.toggle_menu()">menu</a>
+    <div id="menu" style="visibility: hidden">
+      <iframe width="480" height="270" frameborder="0" allowfullscreen
+              src="http://www.youtube.com/embed/ScMzIvxBSi4?rel=0" ></iframe>
+      <br />
+      <a href="http://www.amazon.com/exec/obidos/ASIN/0262560992/">
+        buy the book
+      </a>
     </div>
+
     <script src="lib/codemirror.js"></script>
     <script src="lib/vim.js"></script>
     <script src="lib/matchbrackets.js"></script>
