Comment out menu temporarily

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 (+ 100 200
 </textarea>
 
-    <a id="toggle" href="javascript:void(0)" onclick="app.toggle_menu()">menu</a>
+    <a id="toggle" href="javascript:void(0)" onclick="app.toggle_menu()"></a>
     <div id="menu" style="visibility: hidden">
-      <iframe width="480" height="270" frameborder="0" allowfullscreen
-              src="http://www.youtube.com/embed/ScMzIvxBSi4?rel=0" ></iframe>
+      <!--iframe width="480" height="270" frameborder="0" allowfullscreen
+          src="http://www.youtube.com/embed/ScMzIvxBSi4?rel=0" ></iframe>
       <br />
       <a href="http://www.amazon.com/exec/obidos/ASIN/0262560992/">
         buy the book
-      </a>
+      </a-->
     </div>
 
     <script src="lib/codemirror.js"></script>
